# romea-core-rtls

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_rtls.repos  romea_rtls.rosinstall  romea_rtls_public.repos
cmake/: romea_core_rtlsConfig.cmake.in  romea_rtlsConfig.cmake.in
include/romea_core_rtls/: RTLSGeoreferencedCoordinator.hpp  RTLSGeoreferencedCoordinatorPoller.hpp  RTLSPoll.hpp  RTLSRange.hpp  RTLSRangeNoise.hpp  RTLSRangeRandomNoise.hpp  RTLSSimpleCoordinator.hpp  RTLSSimpleCoordinatorPoller.hpp  RTLSTransceiverEUID.hpp  RTLSTransceiverFunction.hpp  RTLSTransceiverPhy.hpp  RTLSTransceiversDiagnostics.hpp  RTLSTransceiversPairIDs.hpp  RTLSTransceiversPairIDsMapping.hpp  RTLSTransceiversPairNames.hpp
include/romea_core_rtls/coordination/: RTLSGeoreferencedCoordinatorScheduler.hpp  RTLSReachableTransceivers.hpp  RTLSSimpleCoordinatorScheduler.hpp  RTLSTransceiversDiagnostics.hpp
include/romea_core_rtls/serialization/: Pose2DSerialization.hpp  Twist2DSerialization.hpp
include/romea_core_rtls/trilateration/: RTLSPose2DEstimator.hpp  RTLSPosition2DEstimator.hpp  RTLSSimpleTrilateration2D.hpp
include/romea_rtls/: RTLSRange.hpp  RTLSRangeNoise.hpp  RTLSRangeRandomNoise.hpp  RTLSTransceiverFunction.hpp
src/: RTLSGeoreferencedCoordinator.cpp  RTLSGeoreferencedCoordinatorPoller.cpp  RTLSRangeNoise.cpp  RTLSRangeRandomNoise.cpp  RTLSSimpleCoordinator.cpp  RTLSSimpleCoordinatorPoller.cpp  RTLSTransceiverEUID.cpp  RTLSTransceiverFunction.cpp  RTLSTransceiverPhy.cpp  RTLSTransceiversDiagnostics.cpp  RTLSTransceiversPairIDsMapping.cpp
src/coordination/: RTLSGeoreferencedCoordinatorScheduler.cpp  RTLSReachableTransceivers.cpp  RTLSSimpleCoordinatorScheduler.cpp  RTLSTransceiversDiagnostics.cpp
src/serialization/: Pose2DSerialization.cpp  Twist2DSerialization.cpp
src/trilateration/: RTLSPose2DEstimator.cpp  RTLSPosition2DEstimator.cpp  RTLSSimpleTrilateration2D.cpp
test/: CMakeLists.txt  test_coordinator.cpp  test_georeferenced_coordinator_scheduler.cpp  test_pose2d_serialization.cpp  test_pose_estimator.cpp  test_position_estimator.cpp  test_simple_coordinator_scheduler.cpp  test_simple_trilateration.cpp  test_transceiver_ranging_euid.cpp  test_transceiver_ranging_result.cpp  test_transceiver_ranging_status.cpp  test_twist2d_serialization.cpp
